# rust-ndarray

./: Cargo.toml
blas-tests/: Cargo.toml
ndarray-rand/: Cargo.toml
ndarray-rand/src/: lib.rs
parallel/: Cargo.toml
serialization-tests/: Cargo.toml
src/: array_serde.rs  data_traits.rs  impl_constructors.rs  lib.rs  prelude.rs
src/dimension/: conversion.rs  dimension_trait.rs  dynindeximpl.rs
src/iterators/: mod.rs
