[package]

name = "ndarray-sgx"
version = "0.11.0"
authors = ["bluss"]
license = "MIT/Apache-2.0"
readme = "README-crates.io.md"

repository = "https://github.com/bluss/rust-ndarray"
documentation = "https://docs.rs/ndarray/"

description = "An n-dimensional array for general elements and for numerics. Lightweight array views and slicing; views support chunking and splitting."

keywords = ["array", "data-structure", "multidimensional", "matrix", "blas"]
categories = ["data-structures", "science"]

build = "build.rs"

exclude = ["docgen/images/*"]

[lib]
name = "ndarray"
bench = false
test = true

[dependencies]
num-traits = { git = "https://github.com/ekiden/rust-sgx-sdk" }
num-complex = { git = "https://github.com/ekiden/num-complex" }
rustc-serialize = { version = "0.3.20", optional = true }
itertools = { version = "0.7.0", default-features = false }
sgx_tstd = { git = "https://github.com/ekiden/rust-sgx-sdk" }

# Use via the `blas` crate feature!
cblas-sys = { git = "https://github.com/ekiden/cblas-sys", optional = true }
openblas-src = { git = "https://github.com/ekiden/openblas-src", default_features = false, features = ["cblas", "static"], optional = true }

matrixmultiply = { git = "https://github.com/ekiden/rust-sgx-sdk" }
# Use via the `serde-1` crate feature!
serde-sgx = { git = "https://github.com/ekiden/serde", optional = true }

[dev-dependencies]
defmac = "0.1"
rawpointer = "0.1"

[features]
# Enable blas usage
# See README for more instructions
blas = ["cblas-sys", "openblas-src"]

# Serde 1.0
serde-1 = ["serde-sgx"]

# These features are used for testing
test-blas-openblas-sys = ["blas"]
test = ["test-blas-openblas-sys"]

# This feature is used for docs
docs = ["rustc-serialize", "serde-1"]

[profile.release]
[profile.bench]
debug = true

[workspace]
members = ["parallel", "ndarray-rand", "serialization-tests", "blas-tests"]
exclude = ["numeric-tests"]

[package.metadata.release]
no-dev-version = true

[package.metadata.docs.rs]
features = ["docs"]
