[package]
name = "ndarray-rand-sgx"
version = "0.7.0"
authors = ["bluss"]
license = "MIT/Apache-2.0"

repository = "https://github.com/bluss/rust-ndarray"
documentation = "https://docs.rs/ndarray-rand/"

description = "Constructors for randomized arrays. `rand` integration for `ndarray`."

keywords = ["multidimensional", "matrix", "rand", "ndarray"]

[dependencies]
sgx_rand = { git = "https://github.com/ekiden/rust-sgx-sdk" }
ndarray-sgx = { version = "0.11.0", path = ".." }

[package.metadata.release]
no-dev-version = true

